Квартиры сверх нормы в последних итогах дома
